First code build commit

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,14 @@ phases:
   install:
     commands:
       - echo Installing K6 ...
+      - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 379CE192D401AB61
+      - echo "deb https://dl.bintray.com/loadimpact/deb stable main" | sudo tee -a /etc/apt/sources.list
       - sudo apt-get update
-      - sudo apt install curl
-      - curl https://github.com/loadimpact/k6/releases/download/v0.29.0/k6-v0.29.0-linux64.tar.gz -L | tar xvz --strip-components 1
-
+      - sudo apt-get install k6
   build:
     commands:
       - echo Tests started on `date`
-      - ./k6 run test-api.js -e URL=https://test-api.k6.io/public/crocodiles/1/  -e MAX_P95_MS=200 -e MAX_FAILED_RATE=0.01
+      - k6 run test-api.js -e URL=https://test-api.k6.io/public/crocodiles/1/  -e MAX_P95_MS=200 -e MAX_FAILED_RATE=0.01
   post_build:
     commands:
       - echo Tests completed on `date`
